Fix alignment
Only image is centered.

--- a/css/style.css
+++ b/css/style.css
@@ -922,6 +922,7 @@ PERSON/COLLECTION PAGE
 #collection-details img {
 	flex: 0 1;
 	max-width: 300px;
+	align-self: center;
 }
 
 #person-movies {
